--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,13 +12,36 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="src/style.css" />
+
     <title>Weather App</title>
   </head>
   <body>
     <div class="container">
-      <h1>Weather App</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-app">
+        <h1>Christchurch</h1>
+        <ul>
+          <li>Friday 12:00</li>
+
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">18 C/F</div>
+          <div class="col-6">
+            <ul>
+              <li>Humidity</li>
+              <li>Wind</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+    <small>
+      <a href="https://github.com/igorivnaolga/my-weather-app" target="_blank"
+        >Open source code</a
+      >
+      by Olga Sergiienko
+    </small>
     <script src="src/app.js"></script>
   </body>
 </html>
