--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;900&family=Montserrat&family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,30 +21,48 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Christchurch</h1>
-        <ul>
-          <li>Friday 12:00</li>
-
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">18 C/F</div>
-          <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>Christchurch</h1>
             <ul>
-              <li>Humidity</li>
-              <li>Wind</li>
+              <li>Friday 12:00</li>
+
+              <li>Clear</li>
             </ul>
           </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/48/sunny.png"
+                  alt="sunny"
+                />
+                <div>
+                  <strong id="temperature">18</strong>
+                  <span class="units">°C / <a href="#">°F</a></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity:</li>
+                <li>Wind:</li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/igorivnaolga/my-weather-app"
+            target="_blank"
+            >Open source code</a
+          >
+          by Olga Sergiienko
+        </small>
       </div>
     </div>
-    <small>
-      <a href="https://github.com/igorivnaolga/my-weather-app" target="_blank"
-        >Open source code</a
-      >
-      by Olga Sergiienko
-    </small>
+
     <script src="src/app.js"></script>
   </body>
 </html>
