--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/sunny.png"
-                  alt="sunny"
-                />
+                <img src="" alt="" id="icon" />
                 <div>
                   <strong id="temperature"></strong>
                   <span class="units">°C / <a href="#">°F</a></span>
