--- a/index.html
+++ b/index.html
@@ -23,6 +23,32 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form">
+            <div class="row">
+              <div class="col-6">
+                <input
+                  type="search"
+                  placeholder="Enter city"
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  class="btn btn-warning"
+                  type="submit"
+                  value="Search"
+                  id="search-button"
+                />
+              </div>
+              <div class="col-3">
+                <button class="btn btn-primary" id="current-button">
+                  Current
+                </button>
+              </div>
+            </div>
+          </form>
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
