--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="weather-app">
           <form id="search-form">
             <div class="row">
-              <div class="col-6">
+              <div class="col-9">
                 <input
                   type="search"
                   placeholder="Enter city"
@@ -36,14 +36,14 @@
               </div>
               <div class="col-3">
                 <input
-                  class="btn btn-warning"
+                  class="btn btn-warning btn-up"
                   type="submit"
                   value="Search"
                   id="search-button"
                 />
-              </div>
-              <div class="col-3">
-                <button class="btn btn-primary" id="current-button">
+                <!-- </div>
+               <div class="col-3"> -->
+                <button class="btn btn-primary btn-down" id="current-button">
                   Current
                 </button>
               </div>
