--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </div>
               <div class="col-3">
                 <input
-                  class="btn btn-warning btn-up"
+                  class="btn btn-primary btn-up"
                   type="submit"
                   value="Search"
                   id="search-button"
@@ -83,8 +83,7 @@
             href="https://github.com/igorivnaolga/my-weather-app"
             target="_blank"
             >Open source code</a
-          >
-          by Olga Sergiienko
+          ><strong> by Olga Sergiienko</strong>
         </small>
       </div>
     </div>
