--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
                 <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
+            <div class="weather-forecast">
+              <div class="row">
+                <div class="col-2">
+                  <div class="weather-forecast-date"></div>
+                  Thu
+                  <img
+                    src="http://openweathermap.org/img/wn/01d@2x.png"
+                    width="36px"
+                    alt=""
+                  />
+                  <div class="weather-forecast-temperature">
+                    <span class="weather-forecast-temperature-max">18° </span>
+                    <span class="weather-forecast-temperature-min">12° </span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <small>
