Removed Fahrenheit, added styling

--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
                 <img src="" alt="" id="icon" />
                 <div>
                   <strong id="temperature"></strong>
-                  <span class="units"
-                    ><a href="#" id="celsius-link" class="active">°C</a> /
-                    <a href="#" id="fahrenheit-link">°F</a></span
-                  >
+                  <span class="units">°C</span>
                 </div>
               </div>
             </div>
@@ -83,7 +80,7 @@
                   Thu
                   <img
                     src="http://openweathermap.org/img/wn/01d@2x.png"
-                    width="36px"
+                    width="40px"
                     alt=""
                   />
                   <div class="weather-forecast-temperature">
